prevent the Jumbotron section from appear on small screens

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ a,a:hover{
     text-decoration:none;
 }
 .Jumbotron{
-    padding:60px;
+
      background:black;
      color:white;
 }
